Slider alignment fix
Slider is now aligned with the red bar in the graph.

--- a/slider.css
+++ b/slider.css
@@ -4,7 +4,8 @@
 */
 
 #sliderContainer {
-    width: 80%;
+    width: 85%;
+    padding-right: 5px;
     margin: 0 auto;
 }
 
